29.Web Catalog: can substitute a user-selectable column (damage, basegold, etc) and sort by it. 
30.Two new NOCACHE entries in coffeemud.ini file: FILERESOURCES, CATALOG (for you memory conscious people)
31.Internal: slight improvement to db connection management that should improve memory use.
32.MUDSTATE variable in coffeemud.ini file has changed.  Please update your ini files!
33.CLASSSYSTEM has been expanded with another apprentice-based set of choices.
34.New command: MPRUN -- for Archons to run Scriptable scripts, and for use in automated testing.
35.Help on classes and races give much of same details as found on web now.
36.Channel HELP entries are automatically generated.
37.CoffeeMud's bugs were all cured, at public expense.
# Build 5.6.1 Release 4/22/2010 * Bug Fix build only
# Build 5.6.2 Release 4/25/2010 * Bug Fix build only
# Build 5.6.3 Release ?/?/2010
 1.Can now enter I3 RESTART or IMC2 RESTART to reconnect to the intermuds
 2.New language: Undercommon
 3.New property/skill: TemporaryAffects (for timer-dependent behaviors/properties)
 4.New property: Prop_LanguageSpeaker
 5.New INI entry: WIZLISTMASK -- WIZLIST command modified to support it.
 6.MUDGrinder Map editor now has a Scripts editor button on the map screen.
 7.Internal: Lots of refactoring done. Lots.
 8.New INI entries: OBJSPERTHREAD, TICKTIME, MILLISPERMUDHOUR -- control time and thread spawning!
 9.Web & SMTP server INI files have some tweeking options for performance (MAXTHREADS/REQUESTTIMEOUTMINS)
10.New Scriptable Command: MPPOSSESS
11.MERGE command can now be used to merge different database instances of areas/rooms/etc..
12.New Ability INI entries: MAXCOMMONSKILLS, MAXCRAFTINGSKILLS, MAXNONCRAFTINGSKILLS, MAXLANGUAGES
13.New all-skills configuration file: /resources/skills/allqualifylist
14.New IP service (CM1Server) -- a new, more formal-syntax mud interface -- see guides/CM1ServerGuide.html