@@ -1370,6 +1370,9 @@ CBTMSGS=OFF
 # THIRST
 # Disables the tendency for players to get thirsty over time.
 #
+# LOGOUTS
+# Disables the removal of characters from the game world on logout.
+#
 # QUITREASON
 # Disables the prompt for a reason for quitting after new char creation.
 #
